--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_auth: ^4.6.2
   cloud_firestore: ^4.8.0
   charts_flutter: ^0.12.0
-  flutter_datetime_picker: ^1.5.1
+  # flutter_datetime_picker: ^1.5.1
   flutter_local_notifications: ^14.1.1
   flutter_calendar_carousel: ^2.4.1
   flutter_slidable: ^3.0.0
@@ -47,6 +47,7 @@ dependencies:
   fluttertoast: ^8.2.2
 # dependency_overrides:
   intl: ^0.17.0
+  rename: ^3.1.0
 
 dev_dependencies:
   flutter_test:
